# movie-nights

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml  fly.toml
.sqlx/: query-163c964635645684d8c94690b220626c95242c15b6fa9a5a1f17bab9919c5ac6.json  query-23603a631d17a7d74b4a1154db769d037031eef893ad61f455dcb391d7c9d638.json  query-306b69ff974f5749160b08d469c9c33ebd5d0069932fd492681b112cc04802b8.json  query-6ace1226a4aff82644783e94625d94241c910124ba7bd12f3ccf7f527cdfec9c.json  query-90f8f1c610665d5a45c7be36af3e98db37c894d0427b69e9c88d60a397ed9279.json  query-dce1ff01e4a5ab0b71c850ae792c784f19f471ffd0e559894cabd93257414f9f.json  query-f49352638a862c23667109199e1b2c282b12e09f98aa270c70321b3cf0177d59.json  query-ffcead2acbde042dbf370b61e0ae4e96985655b17b0d389b2c1f10210dfdbe76.json
migrations/: 20240829030208_init.sql  20240905155735_dates_to_timestamps.sql
src/: main.rs
templates/: index.hbs
