[package]
name = "movie-nights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
handlebars = { version = "6.0.0", features = ["rust-embed"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
rust-embed = "8.5.0"
serde = { version = "1.0.209", features = ["serde_derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "macros", "time"] }
time = "0.3.36"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
